--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,11 +34,16 @@ services:
      - CONFIG_STORAGE_TOPIC=my_connect_configs
      - OFFSET_STORAGE_TOPIC=my_connect_offsets
      - STATUS_STORAGE_TOPIC=my_connect_statuses
+  generator:
+    build: ./generator
+    links:
+      - postgres
   jupyter-local:
     build: ./jupyter-local
     ports:
      - 8888:8888
      - 4040:4040
+     - 4041:4041
     links:
       - kafka
       - postgres
